--- a/blue-green/test.yml
+++ b/blue-green/test.yml
@@ -4,7 +4,7 @@ metadata:
   name: test-service
 spec:
   selector:
-    app: blue-server
+    app: green-server
   ports:
     - protocol: TCP
       port: 80
