--- a/blue-green/server.yml
+++ b/blue-green/server.yml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: bg-server
-        image: myyrakle/node-server-for-test:2
+        image: myyrakle/node-server-for-test:1
         imagePullPolicy: Always
         ports:
         - containerPort: 80
@@ -24,3 +24,4 @@ spec:
       activeService: prod-service
       previewService: test-service
       autoPromotionEnabled: true
+      autoPromotionSeconds: 10
