--- a/blue-green/server.yml
+++ b/blue-green/server.yml
@@ -29,5 +29,5 @@ spec:
         templates:
         - templateName: bg-server
         args:
-        - name: test-service
+        - name: service-name
           value: test-service.default.svc.cluster.local
