--- a/blue-green/server.yml
+++ b/blue-green/server.yml
@@ -25,3 +25,9 @@ spec:
       previewService: test-service
       autoPromotionEnabled: true
       autoPromotionSeconds: 10
+      prePromotionAnalysis:
+        templates:
+        - templateName: smoke-tests
+        args:
+        - name: service-name
+          value: test-service.default.svc.cluster.local
